# lexsy-backend

./: .env.example  .gitignore  MIGRATION_TO_V1_V2.md  README.md  TEST_CONVERSATION_TRACKING.md  main.py  poc.py  pyproject.toml  render.yaml  requirements.txt  server.py
api/: __init__.py  document.py  placeholder.py
api/v1/: README.md  __init__.py  document.py  placeholder.py
api/v1/app/openai/: __init__.py  filler.py  parser.py
api/v1/models/: __init__.py  models.py
api/v1/repository/: document_repository.py
api/v1/services/: __init__.py  document_generator_service.py  document_service.py  placeholder_service.py
api/v2/: README.md  document.py  placeholder.py
api/v2/app/: __init__.py
api/v2/app/langchain/: __init__.py  filler.py  parser.py
api/v2/app/langchain/agents/: __init__.py  response_generator.py  value_extractor.py
api/v2/app/langchain/tools/: __init__.py  classifier_tool.py  context_analyzer_tool.py  detector_tool.py  validation_tool.py
api/v2/app/langchain/validators/: __init__.py  hybrid_validator.py
api/v2/models/: __init__.py  models.py
api/v2/repository/: __init__.py  document_repository.py
api/v2/services/: __init__.py  document_generator_service.py  document_service.py  placeholder_service.py
app/openai/: __init__.py  filler.py  parser.py
config/: __init__.py  config.py
database/: __init__.py  database.py
models/: __init__.py  models.py
models/payload/: payload.py
repository/: __init__.py  database.py  document_repository.py
services/: document_generator_service.py  document_service.py  placeholder_service.py
